--- a/_mixins.scss
+++ b/_mixins.scss
@@ -6,8 +6,13 @@
  * 
  */
 
-// Add vender prefixes to the property
+// Import the needed functions for the mixin support
+@import "_functions";
+
+// The default prefixes
 $default-prefixes: ("-webkit-","-moz-", "-o-", "-ms-", "");
+
+// Add vender prefixes to the property
 @mixin prefix($property, $value, $prefixes: $default-prefixes) {
     @each $prefix in $prefixes {
         #{$prefix}#{$property}: #{$value};
@@ -33,7 +38,7 @@ $default-prefixes: ("-webkit-","-moz-", "-o-", "-ms-", "");
     box-shadow: white($shadowOpacity) 0 1px 0, inset black($insetOpacity) 0 1px 0;
 }
 
-/// List of the Modernizr classes
+// List of the Modernizr classes
 $ClassList: (
     "applicationcache", "audio ", "backgroundsize", "borderimage", "borderradius", "boxshadow", "canvas",
     "canvastext", "cssanimations", "csscolumns", "cssgradients", "cssreflections", "csstransforms", "csstransforms3d",
@@ -42,28 +47,84 @@ $ClassList: (
     "smil", "svg", "svgclippaths", "textshadow", "touch", "video", "webgl", "websockets", "websqldatabase", "webworkers"
 );
 
-// The mixin to generate the class
+// The mixin to generate the class pair if the
+// class is a Modernzer feature class
 @mixin ModClass($class)
 {
     @each $mclass in $ClassList {
-        @if $mclass == $class {
-            .#{$class}
+      .#{$class}
+      {
+        @content;
+      }
+      @if $mclass == $class {
+            .no-#{$class}
             {
-                @content;
+              @content;
             }
         }
     }
 }
 
-// Mixin to genrate the class with no- prefix
-@mixin NoModClass($class)
+
+// Micro clear fix
+@mixin ClearFix()
 {
-    @each $mclass in $ClassList {
-        @if $mclass == $class {
-            .no-#{$class}
-            {
-                @content;
-            }
-        }
-    }
+  &:before,
+  &:after
+  {
+    content: "";
+    display: table;
+  }
+
+  &:after
+  {
+    clear: both;
+  }
 }
+
+// Opacity property for class, id, or element
+@mixin Opacity($opacity) {
+  opacity: $opacity;
+  $opacity-ie: $opacity * 100;
+  filter: alpha(opacity=$opacity-ie); //IE8
+}
+
+// Absolute position the class, id, or element
+@mixin abs ($top: auto, $right: auto, $bottom: auto, $left: auto) {
+  top: $top;
+  right: $right;
+  bottom: $bottom;
+  left: $left;
+  position: absolute;
+}
+
+// Style links
+@mixin Link($color, $text-dec: underline) {
+  color: $color;
+  text-decoration: none;
+
+  &:hover,
+  &:active,
+  &:focus
+  {
+    color: lighten($color, 20%);
+    text-decoration: $text-dec;
+  }
+}
+
+// Retina display
+@mixin imgRetina2x($image, $extension, $width, $height) {
+  background: url($image + '.' + $extension) no-repeat;
+  width: $width;
+  height: $height;
+
+  @media (min--moz-device-pixel-ratio: 1.3),
+  (-o-min-device-pixel-ratio: 2.6/2),
+  (-webkit-min-device-pixel-ratio: 1.3),
+  (min-device-pixel-ratio: 1.3),
+  (min-resolution: 1.3dppx) {
+    background: url($image + '-2x' + '.' + $extension) no-repeat;
+    background-size: $width $height;
+  }
+}
+
