--- a/_mixins.scss
+++ b/_mixins.scss
@@ -6,8 +6,12 @@
  * 
  */
 
-// Import the needed functions for the mixin support
+// Import the needed functions and other mixin types so that there is
+// only one import when using this file
 @import "_functions";
+@import "_CSS3";
+@import "_media";
+@import "_general";
 
 // The default prefixes
 $default-prefixes: ("-webkit-","-moz-", "-o-", "-ms-", "");
@@ -17,25 +21,6 @@ $default-prefixes: ("-webkit-","-moz-", "-o-", "-ms-", "");
     @each $prefix in $prefixes {
         #{$prefix}#{$property}: #{$value};
     }
-}
-
-// Using the @content for developing the styles to avoid the bloat
-@mixin activeFocus {
-    &:active, &:focus {
-        @content;
-    }
-}
-
-// Add the hover effect to an element
-@mixin hover {
-	&:hover {
-		@content;
-	}
-}
-
-// CSS3 Compatible
-@mixin emboss-box($shadowOpacity, $insetOpacity) {
-    box-shadow: white($shadowOpacity) 0 1px 0, inset black($insetOpacity) 0 1px 0;
 }
 
 // List of the Modernizr classes
@@ -48,38 +33,23 @@ $ClassList: (
 );
 
 // The mixin to generate the class pair if the
-// class is a Modernzer feature class
+// class is a Modernzer feature class otherwise will just create the class
 @mixin ModClass($class)
 {
-    @each $mclass in $ClassList {
+    @each $mclass in $ClassList
+    {
       .#{$class}
       {
         @content;
       }
-      @if $mclass == $class {
+      @if $mclass == $class
+      {
             .no-#{$class}
             {
               @content;
             }
         }
     }
-}
-
-
-// Micro clear fix
-@mixin ClearFix()
-{
-  &:before,
-  &:after
-  {
-    content: "";
-    display: table;
-  }
-
-  &:after
-  {
-    clear: both;
-  }
 }
 
 // Opacity property for class, id, or element
@@ -89,42 +59,5 @@ $ClassList: (
   filter: alpha(opacity=$opacity-ie); //IE8
 }
 
-// Absolute position the class, id, or element
-@mixin abs ($top: auto, $right: auto, $bottom: auto, $left: auto) {
-  top: $top;
-  right: $right;
-  bottom: $bottom;
-  left: $left;
-  position: absolute;
-}
 
-// Style links
-@mixin Link($color, $text-dec: underline) {
-  color: $color;
-  text-decoration: none;
-
-  &:hover,
-  &:active,
-  &:focus
-  {
-    color: lighten($color, 20%);
-    text-decoration: $text-dec;
-  }
-}
-
-// Retina display
-@mixin imgRetina2x($image, $extension, $width, $height) {
-  background: url($image + '.' + $extension) no-repeat;
-  width: $width;
-  height: $height;
-
-  @media (min--moz-device-pixel-ratio: 1.3),
-  (-o-min-device-pixel-ratio: 2.6/2),
-  (-webkit-min-device-pixel-ratio: 1.3),
-  (min-device-pixel-ratio: 1.3),
-  (min-resolution: 1.3dppx) {
-    background: url($image + '-2x' + '.' + $extension) no-repeat;
-    background-size: $width $height;
-  }
-}
 
