--- a/_media.scss
+++ b/_media.scss
@@ -1,6 +1,6 @@
 // Retina display
-@mixin imgRetina2x($image, $extension, $width, $height) {
-  background: url($image + '.' + $extension) no-repeat;
+@mixin imgRetina2x($img, $ext, $width, $height) {
+  background: url($img + '.' + $ext) no-repeat;
   width: $width;
   height: $height;
 
@@ -9,7 +9,7 @@
   (-webkit-min-device-pixel-ratio: 1.3),
   (min-device-pixel-ratio: 1.3),
   (min-resolution: 1.3dppx) {
-    background: url($image + '-2x' + '.' + $extension) no-repeat;
+    background: url($img + '-2x' + '.' + $ext) no-repeat;
     background-size: $width $height;
   }
 }
